# first-digital-FTE

./: .env.example  .gitignore  CHECKPOINT.md  CLAUDE.md  NEXT_STEPS.md  README.md  details.md  main.py  pyproject.toml
.claude/: SKILL.md
.claude/skills/: audit-logger.md  ceo-briefing.md  email-handler.md  facebook-manager.md  hitl-workflow.md  instagram-manager.md  linkedin-poster.md  odoo-integration.md  plan-creator.md  task-processor.md  twitter-manager.md  vault-manager.md  whatsapp-handler.md
AI_Employee_Valut/: Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Valut/.obsidian/: workspace.json
AI_Employee_Valut/Approved/: demo_email_response.md  task_20260124_122315.md  test_dashboard_approval.md  test_email_reply.md
AI_Employee_Valut/Briefings/: 2026-01-23_CEO_Briefing.md
AI_Employee_Valut/Done/: task_20260123_171535.md  task_20260123_171605.md  task_20260123_171610.md  task_20260123_172042.md  task_20260123_172115.md  task_20260123_172116.md  task_20260123_214303.md  task_20260123_214304.md  (+4 more)
backend/: .env.example  pyproject.toml  test_invoice_flow.py  test_twitter.py  test_whatsapp_send.py
backend/src/digital_fte/: base_watcher.py  briefing_generator.py  cli.py  config.py  logger.py  models.py  orchestrator.py
backend/src/digital_fte/mcp/: __init__.py  browser_mcp.py  email_mcp.py  invoice_mcp.py  twitter_mcp.py  whatsapp_mcp.py
backend/src/digital_fte/watchers/: __init__.py  filesystem_watcher.py  gmail_watcher.py  social_media_watcher.py  whatsapp_watcher.py
docs/: scheduling-setup.md
frontend/: package.json
(+39 files in other folders)
